<resources>
    <string name="app_name" translatable="false">SmartAlarm</string>

    <!-- Status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_out">Signed out</string>
    <string name="loading">Loading…</string>



    <!-- Buttons -->
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="disconnect">Disconnect</string>
    <string name="exitApp">Exit</string>
    <string name="email_notsigned" translatable="false">mail@gmail.com</string>
    <string name="name_notSigned">Sign in to show the profile</string>
    <string name="button_singin">Sign in</string>
    <string name="add_alarm">Add alarm</string>
    <string name="button_save">Save</string>

    <!-- Labels -->
    <string name="label_title">Title</string>
    <string name="label_description">Description</string>
    <string name="label_location">Location</string>
    <string name="button_date">Date</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="hh_mm" translatable="false">HH:MM</string>
    <string name="set_your_location">Set your location</string>
    <string name="error_location">Permission revoked. Cannot access to location.</string>
    <string name="location_notfound">The input location not found, try another.</string>

    <!-- API KEY -->
    <!-- api key openwheatherMap-->
    <string name="weatherAPIkey" translatable="false">56ea67b66ab8d74fb18f0958284c324b</string>
    <string name="urlAPIweather" translatable="false"><![CDATA[http://samples.openweathermap.org/data/2.5/forecast?lat=%2$f&lon=%2$f&appid=]]></string>
    <!-- api key google maps distance matrix -->
    <string name="urlAPItraffic" translatable="false">https://maps.googleapis.com/maps/api/distancematrix/json?units=imperial&amp;origins=%1$s&amp;destinations=%2$s&amp;mode=%3$s&amp;key=</string>
    <string name="GoogleDistanceMatrixAPI" translatable="false">AIzaSyC_-R48BiDpqlqIxhtcNOrflacd87Mn4L8</string>

    <!-- Id Google token -->
    <string name="idTokenGoogle" translatable="false">485221616875-dpruhv4qgev2rnjjihfr3kojsa1fe9hu.apps.googleusercontent.com</string>

    <!-- Info -->
    <string name="problemsSaveLocation">Some problem to save the location.</string>
    <string name="preference_update_wifi">Update only with wi-fi</string>
    <string name="preference_active_weather">Active smartAlarm with weather</string>
    <string name="preference_active_traffic">Active smartAlarm with traffic</string>
    <string name="saveBtn">Save</string>
    <string name="preferences" translatable="false">MyPreferences</string>
    <string name="LogAuthSignedIn" translatable="false">onAuthStateChanged:signed_in:</string>
    <string name="LogAuthSignedOut" translatable="false">onAuthStateChanged:signed_out</string>
    <string name="LogCachedSignIn" translatable="false">Got cached sign-in</string>
    <string name="LogConnFail" translatable="false">onConnectionFailed:</string>
    <string name="year" translatable="false">Year</string>
    <string name="month" translatable="false">Month</string>
    <string name="day" translatable="false">Day</string>
    <string name="hour" translatable="false">Hour</string>
    <string name="minute" translatable="false">Minute</string>
    <string name="title" translatable="false">Title</string>
    <string name="location" translatable="false">Location</string>
    <string name="useWeather" translatable="false">useWeather</string>
    <string name="yes">yes</string>
    <string name="latitude" translatable="false">Latitude</string>
    <string name="longitude" translatable="false">Longitude</string>
    <string name="street" translatable="false">Street</string>
    <string name="ToastAlarmMeteo">For meteorological reasons (%1$s) the alarm will sound %2$d minutes before</string>
    <string name="ToastAlarmTraffic">For Traffic reasons the alarm will sound %1$d minutes before</string>
    <string name="LogHandleSignIn" translatable="false">handleSignInResult:</string>
    <string name="LogSigninCredentialCompl" translatable="false">signInWithCredential:onComplete:</string>
    <string name="LogSignInCredentials" translatable="false">signInWithCredential</string>
    <string name="ToastAuthFail">Authentication failed.</string>
    <string name="topicNews" translatable="false">news</string>
    <string name="LogFailRead" translatable="false">Failed to read value.</string>
    <string name="exception" translatable="false">Exception</string>
    <string name="info" translatable="false">info</string>
    <string name="stop" translatable="false">stop</string>
    <string name="sound" translatable="false">sound</string>
    <string name="text" translatable="false">text</string>
    <string name="UserName" translatable="false">User Name</string>
    <string name="AlarmsCounterUntranslatable" translatable="false">Alarms_Counter</string>
    <string name="Alarm_Untranslatable" translatable="false">Alarm_</string>
    <string name="titleUntranslatable" translatable="false">Title</string>
    <string name="dateUntranslatable" translatable="false">Date</string>
    <string name="destinyUntranslatable" translatable="false">Destiny</string>
    <string name="User_Untranslatable" translatable="false">User_</string>
    <string name="ToastMoreNecessaryData">You don\'t choose all necessary data</string>
    <string name="ToastBadCharacter">Title cannot contains \'_\' character</string>
    <string name="StreetUntranslatable" translatable="false">Street</string>
    <string name="ToastStopAlarm">Alarm Stopped</string>
    <string name="alarmActivated">Alarm activated</string>
    <string name="information">Information</string>
    <string name="ToastServiceNoIdent">Service not identified</string>
    <string name="onlyWifi" translatable="false">onlyWifi</string>
    <string name="no" translatable="false">no</string>
    <string name="useTraffic" translatable="false">useTraffic</string>
    <string name="useFirebase" translatable="false">useFirebase</string>
    <string name="marker" translatable="false">Marker</string>
    <string name="location_notfound2">The pressed location not found, try another</string>
    <string name="LogRefreshToken" translatable="false">Refreshed token:</string>
    <string name="LogNotificationReceived">NOTIFICATION RECEIVED \n Title: %1$s \n Text: %2$s</string>
    <string name="save_locationbtn">Save Location</string>
    <string name="btn_enter_your_destiny">Enter your destiny</string>
    <string name="btn_search">Search</string>
    <string name="btn_map_type">Map Type</string>
    <string name="btn_location">location</string>
    <string name="DATE" translatable="false">DATE</string>
    <string name="LOCATION" translatable="false">LOCATION</string>
    <string name="ToastAlarmNoTraffic">Traffic not change the alarm because the state is %1$s</string>
    <string name="cloud_text" translatable="false">Cloud:</string>
    <string name="firebase_text">Only Firebase</string>
    <string name="heroku_text">Use Heroku</string>
    <string name="GETherokuAppURL" translatable="false">https://smart-alarm-2017.herokuapp.com/data</string>
    <string name="removeALLherokuAppURL" translatable="false">https://smart-alarm-2017.herokuapp.com/removeDB</string>
    <string name="POSTherokuAppURL" translatable="false"><![CDATA[https://smart-alarm-2017.herokuapp.com/data/?user=%1$s&alarmCounter=%2$d]]></string>
    <string name="exit_msg">Do you want to exit the app?</string>
    <string name="allDelete2">All alarms was removed (in Firebase and Heroku)</string>
    <string name="allDelete">All alarms was removed (in Firebase)</string>
    <string name="summaryAPIs">Weather and Traffic APIs not works with mobile network</string>
    <string name="summaryCloud">Use Heroku as extra cloud. Firebase does it all.</string>
    <string name="preferenceTitle1">Data Usage</string>
    <string name="preferenceTitle2">APIs Options</string>
    <string name="preferenceTitle3">Cloud Options</string>
    <string name="toastAPIs">If you can use APIs with mobile network active the preferences option</string>


</resources>
